--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,13 @@ p.sp12m
 	font-size: 12px;
 	color: gray;
 }
+p.sp12e
+{
+	margin: 0 0 10px 10px;
+	text-align: left;
+	font-size: 12px;
+	color: gray;
+}
 p.sp16
 {
 	text-align: left;
